# my-movie-db

./: .gitignore  Makefile  README.md  movie_db.json  pyproject.toml
src/: .main.py.swp  .moviedb.py.swp  constants.py  db.py  exceptions.py  main.py  movie_db.json  moviedb.py
src/models/: movie.py
src/ui/: checkbox_frame.py  constants.py  main.py  movie_card.py  movie_frame.py
