[project]
name = "my-movie-db"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13,<4"
dependencies = [
    "requests>=2.28.1,<3",
    "python-decouple>=3.7,<4",
    "pydantic>=1.10.2,<2",
    "bandit>=1.7.5,<2",
    "tk>=0.1.0,<0.2",
    "customtkinter>=5.2.2,<6",
    "icecream>=2.1.8",
    "pillow>=12.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
